# modern-cpp

./: .cspell.json  .gitignore  .mocharc.yml  LICENSE.txt  README.md  index.html  index.md  package-lock.json  package.json  reveal-md.json  reveal.json  slides.html  slides.md
.github/workflows/: publish.yml
00_title/: title.md
01_auto/: auto.md
02_move/: move.md
03_initialization/: initialization.md
04_variadic/: variadic.md
06_smart_pointers/: smart_pointers.md
07_chrono/: chrono.md
08_error_handling/: error_handling.md
09_concurrency/: concurrency.md
10_regex/: regex.md
11_containers/: containers.md
13_constexpr/: constexpr.md
14_vocabulary_types/: vocabulary_types.md
_assets/css/: animations.css  custom.css
_assets/scripts/: compiler-explorer.js  customize.js  startfrom.js
benchmarks/: CMakeLists.txt  frozen.cpp  parallel_accumulate.cpp  parallel_quicksort.cpp
benchmarks/cmake/: Conan.cmake
benchmarks/plot/: plot.py
css/: animations.css  custom.css
scripts/: compiler-explorer.js  customize.js  index-reader.js  load-plugins.js  preprocess.js  startfrom.js
slides/: auto.md  index.md  initialization.md  move.md  reveal-template.html  reveal.html  slides.md  title.md
slides/00_title/: title.md
slides/01_auto/: auto.md
slides/02_move/: move.md
slides/03_initialization/: initialization.md
slides/04_variadic/: variadic.md
slides/05_lambda/: lambda.md
slides/06_smart_pointers/: smart_pointers.md
slides/07_chrono/: chrono.md
slides/08_error_handling/: error_handling.md
test/: test_code_snippets.js
(+9 files in other folders)
